# pokertool

./: # Improvement4.py  .DS_Store.pokerheader.yml  .bandit.yml  .bumpversion.cfg  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .mutmut_config.py  .pokertool_state.json  .pre-commit-config.yaml  ADD_FEATURE_README.md  AI.md  ARCHITECTURE_DIAGRAM.md  AUTOMATIC_CHROME_SETUP.md  BACKEND_HEALTH_ISSUES.md  BETFAIR_FIXES_SUMMARY.md  BF_MOVIE_ANALYSIS.md  CHANGELOG 2.md  CHANGELOG.md  CHANGELOG_SCRAPER_V32.md  CHROME_DEVTOOLS_GUIDE.md  CODE_OF_CONDUCT.md  COMPLETED_TASKS.md  COMPLETED_TASKS_SUMMARY.md  COMPLETE_SUCCESS.md  COMPLETING_REFACTORING.md  COMPLETION_REPORT_2025-10-05.md  COMPLETION_REPORT_BATCH2_2025-10-05.md  COMPLETION_STATUS.md  COMPREHENSIVE_FEATURE_LIST.md  CONTRIBUTING.md  DETECTION_LOG_IMPROVEMENTS.md  DETECTION_QUICK_REFERENCE.md  DETECTION_TASKS_FINAL_REPORT.md  DOCK_ICON_IMPLEMENTATION_SUMMARY.md  DOCK_ICON_TODO.md  Dockerfile  ENHANCED_GUI_V2_README.md  (+191 more)
.claude/: project-instructions.md
.github/: .DS_Store.pokerheader.yml  dependabot.yml
.vectorcode/: config.json  config.json.pokerheader.yml  vectorcode.include
Formula/: README.md  pokertool.rb
VectorCode/: .DS_Store.pokerheader.yml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README 2.md  README.md  neovim.toml  pyproject.toml  selene 2.toml  selene.toml  stylua.toml
_backup_20250915-012359/: poker_gui.py  poker_init.py  poker_modules.py
_backup_20250915-014336/: poker_gui.py
_backup_20250915-014602/: poker_gui.py
_backup_20250915-022521/: poker_go.py  poker_gui.py
_backup_20250915-190328/: apply_pokertool_fixes.py  autoconfirm.py  poker_gui_fix.py  poker_imports.py  poker_tablediagram.py
_backup_20250915-191055/: CHANGELOG.md  README.md  apply_headers.py
_backup_hotfix_20250915-023228/: poker_init.py
archive/: 2025-10-03_fix_spades_and_cleanup.py  apply_headers.py  apply_oct02_update.py  classify_and_move_updates.py  deploy_enhancements.py  final_test_validation.py  fix_onnx_error.py  fix_suit_and_core.py  git_commit_develop.py  launch_pokertool.py  poker_scraper_setup.py  poker_screen_scraper.py  poker_tablediagram.py  py_lines.py  test_poker_gui_enhanced.py  update_gitignore_sep25.py  update_start_py.py
assets/: .DS_Store.pokerheader.yml
backup_20250915_182127/: backup_info.json  poker_config.json
backups/: .DS_Store.pokerheader.yml
build_reports/: report_Improvement1.py_20250915T020550Z.json  report_Improvement1.py_20250915T020550Z.json.pokerheader.yml  report_Improvement1.py_20250915T020550Z.txt
docs/: .DS_Store.pokerheader.yml  ADR_TEMPLATE.md  ADVERT.md  AI.md  API_DOCUMENTATION.md  API_VERSIONING.md  AUTOMATIC_CHROME_SETUP.md  AUTOMATIC_LEARNING_GUIDE.md  BETFAIR_FIXES_SUMMARY.md  BETFAIR_INTEGRATION_CHALLENGES.md  BETFAIR_SETUP_GUIDE.md  BF_MOVIE_ANALYSIS.md  CHROME_DEVTOOLS_GUIDE.md  CODEBASE_STATUS_REPORT.md  CODE_OF_CONDUCT.md  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_REPORT.md  COMPACT_LIVE_ADVICE.md  CONFIGURATION.md  DEAD_CODE_ANALYSIS.md  DETECTION_P0_TASKS_SUMMARY.md  DEVELOPER_ONBOARDING.md  DEVELOPMENT_WORKFLOW.md  ENVIRONMENT_VARIABLES.md  FEATURES.md  GITIGNORE_GUIDE.md  GUI_BLADE_FUNCTIONALITY.md  GUI_IMPROVEMENTS_v81.md  GUI_REWORK_SUMMARY.md  HAND_FORMAT_GUIDE.md  IMPLEMENTATION_STATUS_v86.md  INSTALLATION_ENVIRONMENT_VARIABLES.md  INSTALLATION_REQUIREMENTS.md  INSTALLATION_TROUBLESHOOTING.md  LAUNCH_WITH_DOCK_ICON.md  LEARNING_SYSTEM.md  LEARNING_SYSTEM_IMPLEMENTATION.md  LEARNING_SYSTEM_INDEX.md  LEARNING_SYSTEM_V2_IMPROVEMENTS.md  MANUAL.md  (+59 more)
evals/: .DS_Store.pokerheader.yml  .gitignore  README.md  package-lock.json.pokerheader 2.yml  package-lock.json.pokerheader.yml  package.json.pokerheader 2.yml  package.json.pokerheader.yml  tsconfig.json.pokerheader.yml
k8s/: deployment.yaml  (+6 more)
(+2389 files in other folders)
