[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokertool"
version = "0.0.0"
description = "Poker assistant demo with GUI and hand-analysis logic"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
scraper = ["requests>=2.32.0", "beautifulsoup4>=4.12.0"]

[project.scripts]
pokertool = "pokertool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
