# POKERTOOL-HEADER-START
# ---
# schema: pokerheader.v1
# project: pokertool
# file: pyproject.toml
# version: v28.0.0
# last_commit: '2025-09-23T08:41:38+01:00'
# fixes:
# - date: '2025-09-25'
#   summary: Enhanced enterprise documentation and comprehensive unit tests added
# ---
# POKERTOOL-HEADER-END
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokertool"
version = "0.0.0"
description = "Poker assistant demo with GUI and hand-analysis logic"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
scraper = ["requests>=2.32.0", "beautifulsoup4>=4.12.0"]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6"
]

[project.scripts]
pokertool = "pokertool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
