# POKERTOOL-HEADER-START
# ---
# schema: pokerheader.v1
# project: pokertool
# file: pyproject.toml
# version: v28.0.0
# last_commit: '2025-09-23T08:41:38+01:00'
# fixes:
# - date: '2025-09-25'
#   summary: Enhanced enterprise documentation and comprehensive unit tests added
# ---
# POKERTOOL-HEADER-END
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokertool"
version = "0.0.0"
description = "Poker assistant demo with GUI and hand-analysis logic"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
scraper = ["requests>=2.32.0", "beautifulsoup4>=4.12.0"]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6"
]

[project.scripts]
pokertool = "pokertool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Pytest configuration for PokerTool test suite
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Timeout settings - prevent hanging tests (requires pytest-timeout plugin)
# timeout = 300  # 5 minutes per test (can be overridden with --timeout)
# timeout_method = "thread"  # Use thread-based timeout for better compatibility

# Output settings
addopts = [
    "-v",  # Verbose output
    "--tb=short",  # Short traceback format
    "--strict-markers",  # Strict marker checking
    "--color=yes",  # Colored output
]

# Markers for categorizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "system: system/integration tests (deselect with '-m \"not system\"')",
    "unit: unit tests",
    "gui: GUI-related tests",
    "ml: machine learning tests",
    "scraper: screen scraper tests",
    "asyncio: marks tests as using asyncio",
]

# Test discovery patterns
norecursedirs = [
    ".*",
    "build",
    "dist",
    "*.egg",
    "__pycache__",
    "node_modules",
    ".venv",
    "venv",
]
